# i256-rs

./: .gitignore  CHANGELOG  Cargo.toml  README.md  SECURITY.md  build.rs  clippy.toml
.github/workflows/: bench.yml  ci.yml  cross.yml
devel/: Cargo.toml
devel/benches/: add.rs  bit_algos.rs  div.rs  div_by_mul.rs  input.rs  mul.rs  mul_algos.rs  rotate.rs  shift.rs  shift_algos.rs  sub.rs
devel/src/: lib.rs
devel/tests/: div_math.rs  native_math.rs  ops.rs  util.rs
etc/: README.md  libdivide.py  magic.py
src/: error.rs  lib.rs  parse.rs  types.rs  util.rs  write.rs
src/int/: bitops.rs  casts.rs  checked.rs  constants.rs  limb.rs  mod.rs  ops.rs  overflowing.rs  saturating.rs  strict.rs  traits.rs  unchecked.rs  wrapping.rs
src/ints/: i256.rs  int_macros.rs  macros.rs  mod.rs  shared_macros.rs  u256.rs  uint_macros.rs
src/math/: add.rs  bigint.rs  div.rs  mod.rs  mul.rs  native.rs  rotate.rs  shift.rs  sub.rs  types.rs
src/shared/: bigint.rs  bitops.rs  casts.rs  checked.rs  constants.rs  docs.rs  endian.rs  extensions.rs  limb.rs  mod.rs  ops.rs  ord.rs  overflowing.rs  saturating.rs  shift.rs  strict.rs  traits.rs  unbounded.rs  unchecked.rs  wrapping.rs
src/uint/: bitops.rs  casts.rs  checked.rs  constants.rs  extensions.rs  limb.rs  mod.rs  ops.rs  overflowing.rs  saturating.rs  strict.rs  traits.rs  wrapping.rs
