[package]
name = "i256-test"
version = "0.0.1"
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
edition = "2021"
publish = false

[features]
std = ["i256/std"]
default = ["std"]

[dependencies.i256]
path = ".."
default-features = false

[dev-dependencies]
bnum = { version = "0.12.0", features = ["nightly"] }
crypto-bigint = "0.5.5"
criterion = { version = "0.5.0", features = ["html_reports"] }
fastrand = "2.1.0"
# FIXME: Replace back to "1.0.4" once the PR is merged.
#  There's an issue in quickcheck due to an infinitely repeating shrinker.
#  Issue:   https://github.com/BurntSushi/quickcheck/issues/295
#  Fix:     https://github.com/BurntSushi/quickcheck/pull/296
quickcheck = { git = "https://github.com/Alexhuszagh/quickcheck/", branch = "i32min-shrink-bound-legacy" }

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
lto = true

[[bench]]
name = "add"
path = "benches/add.rs"
harness = false

[[bench]]
name = "div"
path = "benches/div.rs"
harness = false

[[bench]]
name = "mul"
path = "benches/mul.rs"
harness = false

[[bench]]
name = "sub"
path = "benches/sub.rs"
harness = false

# Raw algorithm benchmarks

[[bench]]
name = "mul_algos"
path = "benches/mul_algos.rs"
harness = false

[[bench]]
name = "shift_algos"
path = "benches/shift_algos.rs"
harness = false
